[tool.poetry]
name = "factopy"
version = "0.1.0"
description = ""
authors = ["serinirio <imadom568@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/serinir/factopy"
repository = "https://github.com/serinir/factopy"
keywords = ["PCA", "SVD", "factorisation","reduction","dimension"]
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.3.24"
jaxlib = "^0.3.24"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"




[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
